feat: get genre & studio history
