# internal/delivery/rest/api/api.go
@@ -43,9 +43,11 @@ func (api *API) Register(r chi.Router, nrApp *newrelic.Application) {
 
 		r.Get("/genres", api.handleGetGenres)
 		r.Get("/genres/{genreID}", api.handleGetGenreByID)
+		r.Get("/genres/{genreID}/history", api.handleGetGenreHistoriesByID)
 
 		r.Get("/studios", api.handleGetStudios)
 		r.Get("/studios/{studioID}", api.handleGetStudioByID)
+		r.Get("/studios/{studioID}/history", api.handleGetStudioHistoriesByID)
 
 		r.Get("/user/{username}/anime", api.handleGetUserAnime)
 		r.Get("/user/{username}/anime/relations", api.handleGetUserAnimeRelations)
