# internal/delivery/rest/api/api_genre.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/go-chi/chi/v5"
+	"github.com/rl404/akatsuki/internal/domain/genre/entity"
 	"github.com/rl404/akatsuki/internal/errors"
 	"github.com/rl404/akatsuki/internal/service"
 	"github.com/rl404/akatsuki/internal/utils"
@@ -52,4 +53,37 @@ func (api *API) handleGetGenreByID(w http.ResponseWriter, r *http.Request) {
 
 	genre, code, err := api.service.GetGenreByID(r.Context(), id)
 	utils.ResponseWithJSON(w, code, genre, errors.Wrap(r.Context(), err))
+}
+
+// @summary Get genre stats histories by id.
+// @tags Genre
+// @produce json
+// @param genreID path integer true "genre id"
+// @param start_year query integer false "start year"
+// @param end_date query integer false "end year"
+// @param group query string false "group" enums(MONTHLY,YEARLY) default(MONTHLY)
+// @success 200 {object} utils.Response{data=[]service.GenreHistory}
+// @failure 400 {object} utils.Response
+// @failure 404 {object} utils.Response
+// @failure 500 {object} utils.Response
+// @router /genres/{genreID}/history [get]
+func (api *API) handleGetGenreHistoriesByID(w http.ResponseWriter, r *http.Request) {
+	startYear, _ := strconv.Atoi(r.URL.Query().Get("start_year"))
+	endYear, _ := strconv.Atoi(r.URL.Query().Get("end_year"))
+	group := r.URL.Query().Get("group")
+
+	id, err := strconv.ParseInt(chi.URLParam(r, "genreID"), 10, 64)
+	if err != nil {
+		utils.ResponseWithJSON(w, http.StatusBadRequest, nil, errors.Wrap(r.Context(), errors.ErrInvalidGenreID, err))
+		return
+	}
+
+	histories, code, err := api.service.GetGenreHistoriesByID(r.Context(), service.GetGenreHistoriesRequest{
+		ID:        id,
+		StartYear: startYear,
+		EndYear:   endYear,
+		Group:     entity.HistoryGroup(group),
+	})
+
+	utils.ResponseWithJSON(w, code, histories, errors.Wrap(r.Context(), err))
 }
