# internal/domain/genre/entity/entity.go
@@ -13,3 +13,23 @@ type GetRequest struct {
 	Page  int
 	Limit int
 }
+
+// History is entity for genre history.
+type History struct {
+	Year       int
+	Month      int
+	Mean       float64
+	Rank       int
+	Popularity int
+	Member     int
+	Voter      int
+	Count      int
+}
+
+// GetHistoriesRequest is get histories request model.
+type GetHistoriesRequest struct {
+	GenreID   int64
+	StartYear int
+	EndYear   int
+	Group     HistoryGroup
+}
